php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #26819 http_build_query() crashes on NULL output
Submitted: 2004-01-06 14:58 UTC Modified: 2004-01-06 15:02 UTC
From: ilia at prohost dot org Assigned:
Status: Closed Package: Reproducible crash
PHP Version: 5CVS-2004-01-06 (dev) OS: Any
Private report: No CVE-ID: None
 [2004-01-06 14:58 UTC] ilia at prohost dot org
Description:
------------
When there is nothing to output http_build_query() crashes. 

Reproduce code:
---------------
-r ' $a = array(); var_dump(http_build_query($a)); '

Expected result:
----------------
 

Actual result:
--------------
 

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-01-06 15:02 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC