Fixed bug #26819 (http_build_query() crashes on NULL output). Fixed bug #26817 (http_build_query() does not handle private & protected object properties correctly).